--- a/Battleships.Data/Battleships.Data.csproj
+++ b/Battleships.Data/Battleships.Data.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Battleships.Logic</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
