Fixed tests csproj, also Added readme and images

--- a/Battleships.Tests/Battleships.Tests.Unit/Battleships.Tests.Unit.csproj
+++ b/Battleships.Tests/Battleships.Tests.Unit/Battleships.Tests.Unit.csproj
@@ -20,6 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BattleshipsGame\Battleships.Logic\Battleships.Logic.csproj" />
+    <ProjectReference Include="..\..\Battleships.Logic\Battleships.Logic.csproj" />
   </ItemGroup>
 </Project>
